<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.calculonota.MainActivity">

    <ScrollView
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sii"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView3"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView6"
                android:textColor="?attr/editTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/corte1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/corte1"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/corte2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/corte2"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/corte3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/corte3"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textViewResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:text="DIFINITIVA" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/textView"
                android:textColor="?attr/editTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/c1m2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:ems="10"
                android:hint="@string/c1m2"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/c2m2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:ems="10"
                android:hint="@string/c2m2"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/c3m2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:ems="10"
                android:hint="@string/c3m2"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textViewResultado2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:maxLength="3"
                android:text="DIFINITIVA" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/textView4"
                android:textColor="?attr/editTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/c1m3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:ems="10"
                android:hint="@string/c1m3"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/c2m3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:ems="10"
                android:hint="@string/c2m3"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/c3m3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:ems="10"
                android:hint="@string/c3m3"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textViewResultado3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:maxLength="3"
                android:text="DIFINITIVA" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:onClick="acercaDe"
                android:text="acerca" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:onClick="total"
                android:text="Promedio" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
